--- a/packages/velocity/package.json
+++ b/packages/velocity/package.json
@@ -18,8 +18,7 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "rollup": "^2.60.0",
-    "typescript": "^4.4.4"
+    "rollup": "^2.60.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.4.3",
