--- a/demos/tsconfig.json
+++ b/demos/tsconfig.json
@@ -1,22 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "declaration": true,
-    "downlevelIteration": true,
-    "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "lib": ["dom", "es2020"],
-    "module": "esnext",
+    "module": "amd",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
     "strictNullChecks": false,
-    "suppressImplicitAnyIndexErrors": true,
     "target": "es2020",
-    "typeRoots": [],
     "types": []
   },
   "exclude": [],
