--- a/packages/velocity/package.json
+++ b/packages/velocity/package.json
@@ -18,8 +18,7 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "rollup": "^2.60.0",
-    "typescript": "^4.4.4"
+    "rollup": "^2.60.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.4.3",
@@ -29,8 +28,8 @@
     "@esri/arcgis-rest-service-admin": "3.4.3"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.2.0",
-    "@esri/solution-simple-types": "^1.2.0",
+    "@esri/solution-common": "^1.3.5",
+    "@esri/solution-simple-types": "^1.3.5",
     "tslib": "1.13.0"
   },
   "scripts": {
@@ -76,5 +75,5 @@
     "esri",
     "ES6"
   ],
-  "gitHead": "70f706fb28a50db0b9b13030f263f8e9e270b98d"
+  "gitHead": "9f2f2c69043777abd94120acad0b7c45d172301d"
 }
