--- a/demos/package.json
+++ b/demos/package.json
@@ -8,20 +8,20 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "http-server": "*",
-    "rollup": "^2.60.0",
-    "typescript": "^4.5.5"
+    "rollup": "2.60.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@esri/arcgis-html-sanitizer": "2.8.0",
+    "@esri/arcgis-html-sanitizer": "2.10.0",
     "@esri/arcgis-rest-auth": "3.4.3",
     "@esri/arcgis-rest-feature-layer": "3.4.3",
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "@esri/hub-initiatives": "9.15.0",
-    "@esri/hub-sites": "9.15.0",
-    "@esri/hub-teams": "9.15.0",
+    "@esri/hub-common": "9.29.0",
+    "@esri/hub-initiatives": "9.29.0",
+    "@esri/hub-sites": "9.29.0",
+    "@esri/hub-teams": "9.29.0",
     "@esri/solution-common": "^1.3.10",
     "@esri/solution-creator": "^1.3.10",
     "@esri/solution-deployer": "^1.3.10",
