--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,12 +18,12 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "@esri/hub-initiatives": "9.15.0",
-    "@esri/hub-sites": "9.15.0",
-    "@esri/hub-teams": "9.15.0",
+    "@esri/hub-common": "9.29.0",
+    "@esri/hub-initiatives": "9.29.0",
+    "@esri/hub-sites": "9.29.0",
+    "@esri/hub-teams": "9.29.0",
     "@types/adlib": "^3.0.1",
-    "rollup": "^2.60.0"
+    "rollup": "2.60.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.4.3",
@@ -31,19 +31,19 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "@esri/hub-initiatives": "9.15.0",
-    "@esri/hub-sites": "9.15.0",
-    "@esri/hub-teams": "9.15.0"
+    "@esri/hub-common": "9.29.0",
+    "@esri/hub-initiatives": "9.29.0",
+    "@esri/hub-sites": "9.29.0",
+    "@esri/hub-teams": "9.29.0"
   },
   "dependencies": {
-    "@esri/arcgis-html-sanitizer": "2.8.0",
-    "@types/lodash.isplainobject": "^4.0.6",
+    "@esri/arcgis-html-sanitizer": "2.10.0",
+    "@types/lodash.isplainobject": "^4.0.7",
     "adlib": "3.0.7",
-    "jszip": "3.7.1",
+    "jszip": "3.9.1",
     "lodash.isplainobject": "^4.0.6",
     "tslib": "1.13.0",
-    "xss": "^1.0.6"
+    "xss": "^1.0.11"
   },
   "scripts": {
     "prepare": "npm run build",
