--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -18,11 +18,11 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "@esri/hub-initiatives": "9.15.0",
-    "@esri/hub-sites": "9.15.0",
-    "@esri/hub-teams": "9.15.0",
-    "rollup": "^2.60.0"
+    "@esri/hub-common": "9.29.0",
+    "@esri/hub-initiatives": "9.29.0",
+    "@esri/hub-sites": "9.29.0",
+    "@esri/hub-teams": "9.29.0",
+    "rollup": "2.60.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.4.3",
@@ -30,10 +30,10 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "@esri/hub-initiatives": "9.15.0",
-    "@esri/hub-sites": "9.15.0",
-    "@esri/hub-teams": "9.15.0"
+    "@esri/hub-common": "9.29.0",
+    "@esri/hub-initiatives": "9.29.0",
+    "@esri/hub-sites": "9.29.0",
+    "@esri/hub-teams": "9.29.0"
   },
   "dependencies": {
     "@esri/solution-common": "^1.3.10",
