--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -18,9 +18,9 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "@esri/hub-teams": "9.15.0",
-    "rollup": "^2.60.0"
+    "@esri/hub-common": "9.29.0",
+    "@esri/hub-teams": "9.29.0",
+    "rollup": "2.60.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.4.3",
@@ -28,8 +28,8 @@
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
     "@esri/arcgis-rest-service-admin": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "@esri/hub-teams": "9.15.0"
+    "@esri/hub-common": "9.29.0",
+    "@esri/hub-teams": "9.29.0"
   },
   "dependencies": {
     "@esri/solution-common": "^1.3.10",
