--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -16,14 +16,14 @@
     "@esri/arcgis-rest-auth": "3.4.3",
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
-    "@esri/hub-common": "9.15.0",
-    "rollup": "^2.60.0"
+    "@esri/hub-common": "9.29.0",
+    "rollup": "2.60.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "3.4.3",
     "@esri/arcgis-rest-portal": "3.4.3",
     "@esri/arcgis-rest-request": "3.4.3",
-    "@esri/hub-common": "9.15.0"
+    "@esri/hub-common": "9.29.0"
   },
   "dependencies": {
     "@esri/solution-common": "^1.3.10",
