--- a/demos/package.json
+++ b/demos/package.json
@@ -22,19 +22,19 @@
     "@esri/hub-initiatives": "9.29.0",
     "@esri/hub-sites": "9.29.0",
     "@esri/hub-teams": "9.29.0",
-    "@esri/solution-common": "^1.3.16",
-    "@esri/solution-creator": "^1.3.16",
-    "@esri/solution-deployer": "^1.3.16",
-    "@esri/solution-feature-layer": "^1.3.16",
-    "@esri/solution-file": "^1.3.16",
-    "@esri/solution-form": "^1.3.16",
-    "@esri/solution-group": "^1.3.16",
-    "@esri/solution-hub-types": "^1.3.16",
-    "@esri/solution-simple-types": "^1.3.16",
-    "@esri/solution-storymap": "^1.3.16",
-    "@esri/solution-velocity": "^1.3.16",
-    "@esri/solution-viewer": "^1.3.16",
-    "@esri/solution-web-experience": "^1.3.16",
+    "@esri/solution-common": "1.3.16",
+    "@esri/solution-creator": "1.3.16",
+    "@esri/solution-deployer": "1.3.16",
+    "@esri/solution-feature-layer": "1.3.16",
+    "@esri/solution-file": "1.3.16",
+    "@esri/solution-form": "1.3.16",
+    "@esri/solution-group": "1.3.16",
+    "@esri/solution-hub-types": "1.3.16",
+    "@esri/solution-simple-types": "1.3.16",
+    "@esri/solution-storymap": "1.3.16",
+    "@esri/solution-velocity": "1.3.16",
+    "@esri/solution-viewer": "1.3.16",
+    "@esri/solution-web-experience": "1.3.16",
     "adlib": "3.0.7",
     "tslib": "1.14.1"
   },
