--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -36,16 +36,16 @@
     "@esri/hub-teams": "9.29.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.3.16",
-    "@esri/solution-feature-layer": "^1.3.16",
-    "@esri/solution-file": "^1.3.16",
-    "@esri/solution-form": "^1.3.16",
-    "@esri/solution-group": "^1.3.16",
-    "@esri/solution-hub-types": "^1.3.16",
-    "@esri/solution-simple-types": "^1.3.16",
-    "@esri/solution-storymap": "^1.3.16",
-    "@esri/solution-velocity": "^1.3.16",
-    "@esri/solution-web-experience": "^1.3.16",
+    "@esri/solution-common": "1.3.16",
+    "@esri/solution-feature-layer": "1.3.16",
+    "@esri/solution-file": "1.3.16",
+    "@esri/solution-form": "1.3.16",
+    "@esri/solution-group": "1.3.16",
+    "@esri/solution-hub-types": "1.3.16",
+    "@esri/solution-simple-types": "1.3.16",
+    "@esri/solution-storymap": "1.3.16",
+    "@esri/solution-velocity": "1.3.16",
+    "@esri/solution-web-experience": "1.3.16",
     "tslib": "1.14.1"
   },
   "scripts": {
