--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -32,10 +32,10 @@
     "@esri/hub-teams": "9.29.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.3.16",
-    "@esri/solution-feature-layer": "^1.3.16",
-    "@esri/solution-file": "^1.3.16",
-    "@esri/solution-group": "^1.3.16",
+    "@esri/solution-common": "1.3.16",
+    "@esri/solution-feature-layer": "1.3.16",
+    "@esri/solution-file": "1.3.16",
+    "@esri/solution-group": "1.3.16",
     "tslib": "1.14.1"
   },
   "scripts": {
