--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -26,7 +26,7 @@
     "@esri/hub-common": "9.29.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.3.16",
+    "@esri/solution-common": "1.3.16",
     "tslib": "1.14.1"
   },
   "scripts": {
