--- a/packages/velocity/package.json
+++ b/packages/velocity/package.json
@@ -28,8 +28,8 @@
     "@esri/arcgis-rest-service-admin": "3.4.3"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.3.16",
-    "@esri/solution-simple-types": "^1.3.16",
+    "@esri/solution-common": "1.3.16",
+    "@esri/solution-simple-types": "1.3.16",
     "tslib": "1.14.1"
   },
   "scripts": {
