--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -32,8 +32,8 @@
     "@esri/hub-initiatives": "9.29.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^1.3.16",
-    "@esri/solution-simple-types": "^1.3.16",
+    "@esri/solution-common": "1.3.16",
+    "@esri/solution-simple-types": "1.3.16",
     "tslib": "1.14.1"
   },
   "scripts": {
