--- a/package.json
+++ b/package.json
@@ -2,6 +2,61 @@
   "name": "@esri/solution.js",
   "version": "1.5.0",
   "description": "A library running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
+  "author": "Esri",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/Esri/solution.js#readme",
+  "bugs": {
+    "url": "https://github.com/Esri/solution.js/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Esri/solution.js.git"
+  },
+  "scripts": {
+    "start:deployer": "lerna run build && http-server ./demos/deploySolution",
+    "build": "lerna run build",
+    "build:umd": "lerna run build:umd",
+    "clean": "npm run clean:src && npm run clean:dist",
+    "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map} && find demos/{src,dist}/*.{d.ts,js,js.map} -type f -not -wholename 'demos/src/*.min.js' -delete",
+    "clean:dist": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
+    "deepclean": "rm -rf ./node_modules && rm -rf ./demos/node_modules && rm -rf packages/*/node_modules && npm run clean",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "lint:staged": "npx lint-staged",
+    "prettify": "prettier --write \"packages/**/+(src|test)/**/*.ts\"",
+    "dev": "support/dev.sh",
+    "getupdates": "npm-check-updates --upgrade",
+    "test": "npm run lint && npm run test:chrome",
+    "test:browsers": "karma start --single-run --browsers Chrome,Firefox,Edge",
+    "test:chrome": "karma start --single-run --browsers=Chrome",
+    "test:chrome:ci": "karma start --single-run --browsers ChromeHeadlessCI karma.conf.js",
+    "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
+    "test:edge": "karma start --single-run --browsers=Edge",
+    "test:firefox": "karma start --single-run --browsers=Firefox",
+    "test:ci": "npm run lint && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
+    "test:ci:win": "npm run lint && npm run test:chrome:ci && npm run test:firefox && npm run coveralls:win",
+    "test:all": "npm run test:chrome && npm run test:edge && npm run test:firefox",
+    "test:coverage": "npm run test:chrome:ci && npm run coveralls",
+    "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
+    "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
+    "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
+    "docs:build": "typedoc",
+    "docs:deploy": "node support/deploy-doc-site.js",
+    "release:prepare1": "git fetch --all && lerna bootstrap && npm test",
+    "release:prepare2": "lerna publish --no-git-tag-version --no-push --skip-npm --yes",
+    "release:review": "git --no-pager diff --word-diff",
+    "release:publish-git": "bash ./support/publish.sh",
+    "release:publish-npm": "lerna publish from-package --force-publish=* --no-git-tag-version --no-push --yes --no-git-reset",
+    "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
+    "postinstall": "npm run bootstrap",
+    "bootstrap": "lerna bootstrap",
+    "precommit": "lint-staged",
+    "y:link:hub": "lerna run y:link:hub",
+    "y:unlink:hub": "lerna run y:unlink:hub && npm install"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@chiragrupani/karma-chromium-edge-launcher": "^2.2.2",
     "@khanacademy/tota11y": "^0.2.0",
@@ -54,7 +109,7 @@
     "karma-spec-reporter": "0.0.34",
     "karma-typescript": "^5.5.3",
     "karma-typescript-es6-transform": "^5.5.3",
-    "lerna": "^5.5.1",
+    "lerna": "^5.5.4",
     "lint-staged": "^13.0.3",
     "marked": "^4.0.19",
     "minimatch": "^5.1.0",
@@ -92,55 +147,6 @@
     "tabWidth": 2,
     "useTabs": false
   },
-  "scripts": {
-    "start:deployer": "lerna run build && http-server ./demos/deploySolution",
-    "build": "lerna run build",
-    "build:umd": "lerna run build:umd",
-    "clean": "npm run clean:src && npm run clean:dist",
-    "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map} && find demos/{src,dist}/*.{d.ts,js,js.map} -type f -not -wholename 'demos/src/*.min.js' -delete",
-    "clean:dist": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
-    "deepclean": "rm -rf ./node_modules && rm -rf ./demos/node_modules && rm -rf packages/*/node_modules && npm run clean",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
-    "lint:staged": "npx lint-staged",
-    "prettify": "prettier --write \"packages/**/+(src|test)/**/*.ts\"",
-    "dev": "support/dev.sh",
-    "getupdates": "npm-check-updates --upgrade",
-    "test": "npm run lint && npm run test:chrome",
-    "test:browsers": "karma start --single-run --browsers Chrome,Firefox,Edge",
-    "test:chrome": "karma start --single-run --browsers=Chrome",
-    "test:chrome:ci": "karma start --single-run --browsers ChromeHeadlessCI karma.conf.js",
-    "test:chrome:debug": "karma start --auto-watch --no-single-run --browsers=Chrome",
-    "test:edge": "karma start --single-run --browsers=Edge",
-    "test:firefox": "karma start --single-run --browsers=Firefox",
-    "test:ci": "npm run lint && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
-    "test:ci:win": "npm run lint && npm run test:chrome:ci && npm run test:firefox && npm run coveralls:win",
-    "test:all": "npm run test:chrome && npm run test:edge && npm run test:firefox",
-    "test:coverage": "npm run test:chrome:ci && npm run coveralls",
-    "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
-    "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
-    "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
-    "docs:build": "typedoc",
-    "docs:deploy": "node support/deploy-doc-site.js",
-    "release:prepare1": "git fetch --all && lerna bootstrap && npm test",
-    "release:prepare2": "lerna publish --no-git-tag-version --no-push --skip-npm --yes",
-    "release:review": "git --no-pager diff --word-diff",
-    "release:publish-git": "bash ./support/publish.sh",
-    "release:publish-npm": "lerna publish from-package --force-publish=* --no-git-tag-version --no-push --yes --no-git-reset",
-    "release:publish-retry": "lerna publish from-package --no-git-tag-version --no-push --yes",
-    "postinstall": "npm run bootstrap",
-    "bootstrap": "lerna bootstrap",
-    "precommit": "lint-staged",
-    "y:link:hub": "lerna run y:link:hub",
-    "y:unlink:hub": "lerna run y:unlink:hub && npm install"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Esri/solution.js.git"
-  },
   "contributors": [
     {
       "name": "Mike Tschudi",
@@ -161,11 +167,5 @@
     {
       "name": "John Gravois"
     }
-  ],
-  "author": "Esri",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/Esri/solution.js/issues"
-  },
-  "homepage": "https://github.com/Esri/solution.js#readme"
+  ]
 }
