--- a/demos/package.json
+++ b/demos/package.json
@@ -7,8 +7,13 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@types/node": "^18.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
     "http-server": "*",
+    "marked": "^4.1.1",
     "rollup": "2.79.0",
+    "slug": "^8.2.2",
     "typescript": "^4.8.2"
   },
   "dependencies": {
