--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.17.1
+      - name: Install Node.js dependencies
+        run: npm ci --ignore-scripts
       - name: lint
         shell: bash
         run: |
